[package]
name = "rust_grpc_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
tonic = "0.5.0"
prost = "0.8.0"
prost-types = "0.8.0"
libc = "0.2.98"
futures = "0.3.15"
crossbeam = "0.5.0"
tokio = { version = "1.8.1", features = [ "rt", "rt-multi-thread"] }
tokio-stream = { verison = "0.1.7", features = ["sync"] }

[build-dependencies]
tonic-build = "0.5.1"


